--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/roytelles/Desktop/Python Codes/UdacityStuff/DataEng Nano/Project2\n"
+     ]
+    }
+   ],
    "source": [
     "# checking your current working directory\n",
     "print(os.getcwd())\n",
@@ -62,7 +70,7 @@
     "    \n",
     "# join the file path and roots with the subdirectories using glob\n",
     "    file_path_list = glob.glob(os.path.join(root,'*'))\n",
-    "    #print(file_path_list)"
+    "    # print(file_path_list)"
    ]
   },
   {
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,28 +105,38 @@
     "            \n",
     "# uncomment the code below if you would like to get total number of rows \n",
     "#print(len(full_data_rows_list))\n",
-    "# uncomment the code below if you would like to check to see what the list of event data rows will look like\n",
+    "# uncomment the code below if you would like to check to see what the list of event\n",
+    "# data rows will look like\n",
     "#print(full_data_rows_list)\n",
     "\n",
-    "# creating a smaller event data csv file called event_datafile_full csv that will be used to insert data into the \\\n",
-    "# Apache Cassandra tables\n",
+    "# creating a smaller event data csv file called event_datafile_full csv that will be\n",
+    "# used to insert data into the Apache Cassandra tables\n",
     "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL, skipinitialspace=True)\n",
     "\n",
     "with open('event_datafile_new.csv', 'w', encoding = 'utf8', newline='') as f:\n",
     "    writer = csv.writer(f, dialect='myDialect')\n",
-    "    writer.writerow(['artist','firstName','gender','itemInSession','lastName','length',\\\n",
-    "                'level','location','sessionId','song','userId'])\n",
+    "    writer.writerow(['artist','firstName','gender','itemInSession','lastName','length',\n",
+    "                     'level','location','sessionId','song','userId'])\n",
     "    for row in full_data_rows_list:\n",
     "        if (row[0] == ''):\n",
     "            continue\n",
-    "        writer.writerow((row[0], row[2], row[3], row[4], row[5], row[6], row[7], row[8], row[12], row[13], row[16]))\n"
+    "        writer.writerow((row[0], row[2], row[3], row[4], row[5], row[6], row[7],\n",
+    "                         row[8], row[12], row[13], row[16]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6821\n"
+     ]
+    }
+   ],
    "source": [
     "# check the number of rows in your csv file\n",
     "with open('event_datafile_new.csv', 'r', encoding = 'utf8') as f:\n",
@@ -165,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +191,7 @@
     "# (127.0.0.1)\n",
     "\n",
     "from cassandra.cluster import Cluster\n",
-    "cluster = Cluster()\n",
+    "cluster = Cluster(['127.0.0.1'])\n",
     "\n",
     "# To establish connection and begin executing queries, need a session\n",
     "session = cluster.connect()"
@@ -188,11 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace "
+    "# TO-DO: Create a Keyspace\n",
+    "try:\n",
+    "    session.execute(\"\"\"\n",
+    "    CREATE KEYSPACE IF NOT EXISTS udacity\n",
+    "    WITH REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1}\n",
+    "    \"\"\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -204,11 +229,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n"
+    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
+    "try:\n",
+    "    session.set_keyspace('udacity')\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -237,26 +266,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
+    "# Because we want to do three different queries, we will need different tables that\n",
+    "# partition the data differently\n",
     "\n",
-    "\n",
-    "                    "
+    "# Query 1:\n",
+    "#     Table Name: Music library\n",
+    "#         Column 1: Artist\n",
+    "#         Column 2: Song\n",
+    "#         Column 3: Length\n",
+    "#         PRIMARY KEY (artist, song)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_music_library = \"DROP TABLE music_library;\"\n",
+    "drop\n",
+    "\n",
+    "try:\n",
+    "    session.execute(drop_music_library)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app\n",
+    "## history that was heard during sessionId = 338, and itemInSession = 4\n",
+    "query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS music_library (\n",
+    "        sessionId text,\n",
+    "        itemInSession text,\n",
+    "        artist text,\n",
+    "        song text,\n",
+    "        length text,\n",
+    "        PRIMARY KEY (sessionId, itemInSession)\n",
+    "    )\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values inserted\n"
+     ]
+    }
+   ],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "# We have provided part of the code to set up the CSV file. Please complete the Apache\n",
+    "# Cassandra code below\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
@@ -264,11 +346,14 @@
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"<ENTER INSERT STATEMENT HERE>\"\n",
-    "        query = query + \"<ASSIGN VALUES HERE>\"\n",
+    "        query = \"\"\"\n",
+    "            INSERT INTO music_library (sessionId, itemInSession, artist, song, length)\n",
+    "        \"\"\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[#], line[#]))"
+    "        session.execute(query, (line[3], line[8], line[0], line[9], line[5]))\n",
+    "    print('Values inserted')"
    ]
   },
   {
@@ -280,13 +365,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artist: Faithless\n",
+      "        \n",
+      "Song: Music Matters (Mark Knight Dub)\n",
+      "        \n",
+      "Length: 495.3073\n",
+      "    \n"
+     ]
+    }
+   ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table"
+    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "verify = \"\"\"\n",
+    "    SELECT * FROM music_library WHERE iteminsession = '338' AND sessionid = '4';\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    rows = session.execute(verify)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(f\"\"\"Artist: {row.artist}\n",
+    "        \\nSong: {row.song}\n",
+    "        \\nLength: {row.length}\n",
+    "    \"\"\")"
    ]
   },
   {
@@ -406,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
