Add final queries

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,10 +275,31 @@
     "\n",
     "# Query 1:\n",
     "#     Table Name: Music library\n",
-    "#         Column 1: Artist\n",
-    "#         Column 2: Song\n",
-    "#         Column 3: Length\n",
-    "#         PRIMARY KEY (artist, song)"
+    "#         Column 1: sessionId text,\n",
+    "#         Column 2: itemInSession text,\n",
+    "#         Column 3: artist text,\n",
+    "#         Column 4: song text,\n",
+    "#         Column 5: length text,\n",
+    "#         PRIMARY KEY (sessionId, itemInSession)\n",
+    "\n",
+    "# Query 2:\n",
+    "#     Table Name: Artist library\n",
+    "#         Column 1: userId text,\n",
+    "#         Column 2: sessionId text,\n",
+    "#         Column 3: itemInSession text,\n",
+    "#         Column 4: artist text,\n",
+    "#         Column 5: song text,\n",
+    "#         Column 6: firstName text,\n",
+    "#         Column 7: lastName text,\n",
+    "#         PRIMARY KEY (userId, sessionId, itemInSession)\n",
+    "\n",
+    "# Query 3:\n",
+    "#     Table Name: User library\n",
+    "#         Column 1: userId text,\n",
+    "#         Column 2: firstName text,\n",
+    "#         Column 3: lastName text,\n",
+    "#         Column 4: song text,\n",
+    "#         PRIMARY KEY (song, userId, firstName, lastName)"
    ]
   },
   {
@@ -288,7 +309,6 @@
    "outputs": [],
    "source": [
     "drop_music_library = \"DROP TABLE music_library;\"\n",
-    "drop\n",
     "\n",
     "try:\n",
     "    session.execute(drop_music_library)\n",
@@ -298,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 98,
    "metadata": {
     "scrolled": false
    },
@@ -365,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 99,
    "metadata": {
     "scrolled": true
    },
@@ -410,42 +430,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
+    "drop_artist_library = \"DROP TABLE artist_library;\"\n",
     "\n",
-    "\n",
-    "                    "
+    "try:\n",
+    "    session.execute(drop_artist_library)\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table created\n"
+     ]
+    }
+   ],
+   "source": [
+    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by\n",
+    "## itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS artist_library (\n",
+    "        userId text,\n",
+    "        sessionId text,\n",
+    "        itemInSession text,\n",
+    "        artist text,\n",
+    "        song text,\n",
+    "        firstName text,\n",
+    "        lastName text,\n",
+    "        PRIMARY KEY (userId, sessionId, itemInSession)\n",
+    "    )\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    session.execute(query)\n",
+    "    print('Table created')\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"\"\"\n",
+    "            INSERT INTO artist_library\n",
+    "                (userId, sessionId, itemInSession, artist, song, firstName, lastName)\n",
+    "        \"\"\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
+    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        session.execute(query, (line[10], line[8], line[3], line[0], line[9], line[1], line[4]))\n",
+    "    print('Values inserted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artist: Down To The Bone\n",
+      "        \n",
+      "Song: Keep On Keepin' On\n",
+      "        \n",
+      "User: Sylvie Cruz\n",
+      "\n",
+      "    \n",
+      "Artist: Three Drives\n",
+      "        \n",
+      "Song: Greece 2000\n",
+      "        \n",
+      "User: Sylvie Cruz\n",
+      "\n",
+      "    \n",
+      "Artist: Sebastien Tellier\n",
+      "        \n",
+      "Song: Kilometer\n",
+      "        \n",
+      "User: Sylvie Cruz\n",
+      "\n",
+      "    \n",
+      "Artist: Lonnie Gordon\n",
+      "        \n",
+      "Song: Catch You Baby (Steve Pitron & Max Sanna Radio Edit)\n",
+      "        \n",
+      "User: Sylvie Cruz\n",
+      "\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "verify = \"\"\"\n",
+    "    SELECT * FROM artist_library\n",
+    "    WHERE userid = '10' AND sessionid = '182'\n",
+    "    ORDER BY sessionid, iteminsession;\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    rows = session.execute(verify)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "for row in rows:\n",
+    "    print(f\"\"\"Artist: {row.artist}\n",
+    "        \\nSong: {row.song}\n",
+    "        \\nUser: {row.firstname} {row.lastname}\\n\n",
+    "    \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "drop_user_library = \"DROP TABLE user_library;\"\n",
+    "\n",
+    "try:\n",
+    "    session.execute(drop_user_library)\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table created\n"
+     ]
+    }
+   ],
    "source": [
     "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "query = \"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS user_library (\n",
+    "        userId text,\n",
+    "        firstName text,\n",
+    "        lastName text,\n",
+    "        song text,\n",
+    "        PRIMARY KEY (song, userId, firstName, lastName)\n",
+    "    )\n",
+    "\"\"\"\n",
     "\n",
-    "\n",
-    "                    "
+    "try:\n",
+    "    session.execute(query)\n",
+    "    print('Table created')\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Values inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "        query = \"\"\"\n",
+    "            INSERT INTO user_library\n",
+    "                (userId, firstName, lastName, song)\n",
+    "        \"\"\"\n",
+    "        query = query + \"VALUES (%s, %s, %s, %s)\"\n",
+    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        session.execute(query, (line[10], line[1], line[4], line[9]))\n",
+    "    print('Values inserted')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Users:\n",
+      "\n",
+      "Jacqueline Lynch\n",
+      "\n",
+      "Tegan Levine\n",
+      "\n",
+      "Sara Johnson\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "verify = \"\"\"\n",
+    "    SELECT * FROM user_library\n",
+    "    WHERE song = 'All Hands Against His Own';\n",
+    "\"\"\"\n",
+    "\n",
+    "try:\n",
+    "    rows = session.execute(verify)\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "print(\"Users:\\n\")\n",
+    "for row in rows:\n",
+    "    print(f\"{row.firstname} {row.lastname}\\n\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -465,10 +701,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})\n"
+     ]
+    }
+   ],
+   "source": [
+    "drop_music_library = \"DROP TABLE music_library;\"\n",
+    "drop_artist_library = \"DROP TABLE artist_library;\"\n",
+    "drop_user_library = \"DROP TABLE user_library;\"\n",
+    "\n",
+    "drop_queries = [drop_music_library, drop_artist_library, drop_user_library]\n",
+    "\n",
+    "try:\n",
+    "    for query in drop_queries:\n",
+    "        session.execute(query)\n",
+    "    print(\"Tables dropped\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -479,27 +736,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
     "session.shutdown()\n",
     "cluster.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
