--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 145,
    "metadata": {
     "scrolled": false
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 146,
    "metadata": {
     "scrolled": true
    },
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -701,14 +701,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Unable to complete the operation against any hosts', {<Host: 127.0.0.1:9042 datacenter1>: ConnectionException('Pool is shutdown')})\n"
+      "Tables dropped\n"
      ]
     }
    ],
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
