Formalize queries and adjust primary keys

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,8 @@
     "# Get your current folder and subfolder event data\n",
     "filepath = os.getcwd() + '/event_data'\n",
     "\n",
-    "# Create a for loop to create a list of files and collect each filepath\n",
+    "# Create a for loop to create a list of files and collect each\n",
+    "# filepath\n",
     "for root, dirs, files in os.walk(filepath):\n",
     "    \n",
     "# join the file path and roots with the subdirectories using glob\n",
@@ -86,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initiating an empty list of rows that will be generated from each file\n",
+    "# initiating an empty list of rows that will be generated from each\n",
+    "# file\n",
     "full_data_rows_list = [] \n",
     "    \n",
     "# for every filepath in the file path list \n",
@@ -103,30 +105,37 @@
     "            #print(line)\n",
     "            full_data_rows_list.append(line) \n",
     "            \n",
-    "# uncomment the code below if you would like to get total number of rows \n",
+    "# uncomment the code below if you would like to get total number of\n",
+    "# rows \n",
     "#print(len(full_data_rows_list))\n",
-    "# uncomment the code below if you would like to check to see what the list of event\n",
-    "# data rows will look like\n",
+    "\n",
+    "# uncomment the code below if you would like to check to see what\n",
+    "# the list of event data rows will look like\n",
     "#print(full_data_rows_list)\n",
     "\n",
-    "# creating a smaller event data csv file called event_datafile_full csv that will be\n",
-    "# used to insert data into the Apache Cassandra tables\n",
-    "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL, skipinitialspace=True)\n",
+    "# creating a smaller event data csv file called event_datafile_full\n",
+    "# csv that will be used to insert data into the Apache Cassandra\n",
+    "# tables\n",
+    "csv.register_dialect('myDialect', quoting=csv.QUOTE_ALL,\n",
+    "                     skipinitialspace=True)\n",
     "\n",
-    "with open('event_datafile_new.csv', 'w', encoding = 'utf8', newline='') as f:\n",
+    "with (open('event_datafile_new.csv', 'w', encoding = 'utf8',\n",
+    "           newline='') as f):\n",
     "    writer = csv.writer(f, dialect='myDialect')\n",
-    "    writer.writerow(['artist','firstName','gender','itemInSession','lastName','length',\n",
-    "                     'level','location','sessionId','song','userId'])\n",
+    "    writer.writerow(['artist','firstName','gender','itemInSession',\n",
+    "                     'lastName','length', 'level','location',\n",
+    "                     'sessionId','song','userId'])\n",
     "    for row in full_data_rows_list:\n",
     "        if (row[0] == ''):\n",
     "            continue\n",
-    "        writer.writerow((row[0], row[2], row[3], row[4], row[5], row[6], row[7],\n",
-    "                         row[8], row[12], row[13], row[16]))\n"
+    "        writer.writerow((row[0], row[2], row[3], row[4], row[5],\n",
+    "                         row[6], row[7], row[8], row[12], row[13],\n",
+    "                         row[16]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,17 +192,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This should make a connection to a Cassandra instance your local machine \n",
-    "# (127.0.0.1)\n",
+    "# This should make a connection to a Cassandra instance your local\n",
+    "# machine (127.0.0.1)\n",
     "\n",
     "from cassandra.cluster import Cluster\n",
     "cluster = Cluster(['127.0.0.1'])\n",
     "\n",
-    "# To establish connection and begin executing queries, need a session\n",
+    "# To establish connection and begin executing queries, need a\n",
+    "# session\n",
     "session = cluster.connect()"
    ]
   },
@@ -206,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +224,8 @@
     "try:\n",
     "    session.execute(\"\"\"\n",
     "    CREATE KEYSPACE IF NOT EXISTS udacity\n",
-    "    WITH REPLICATION = {'class': 'SimpleStrategy', 'replication_factor': 1}\n",
+    "    WITH REPLICATION = {'class': 'SimpleStrategy', \n",
+    "    'replication_factor': 1}\n",
     "    \"\"\")\n",
     "except Exception as e:\n",
     "    print(e)"
@@ -229,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n",
+    "# Set KEYSPACE to the keyspace specified above\n",
     "try:\n",
     "    session.set_keyspace('udacity')\n",
     "except Exception as e:\n",
@@ -259,19 +270,28 @@
     "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
     "    \n",
     "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "\n",
-    "\n"
+    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Because we want to do three different queries, we will need different tables that\n",
-    "# partition the data differently\n",
+    "# Because we want to do three different queries, we will need\n",
+    "# different tables that partition the data differently\n",
     "\n",
     "# Query 1:\n",
     "#     Table Name: Music library\n",
@@ -303,27 +323,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 69,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "drop_music_library = \"DROP TABLE music_library;\"\n",
-    "\n",
-    "try:\n",
-    "    session.execute(drop_music_library)\n",
-    "except Exception as e:\n",
-    "    print(e)"
+    "## Query 1\n",
+    "### Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app\n",
-    "## history that was heard during sessionId = 338, and itemInSession = 4\n",
+    "## Query 1:  Give me the artist, song title and song's length in\n",
+    "## the music app history that was heard during sessionId = 338,\n",
+    "## and itemInSession = 4\n",
     "query = \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS music_library (\n",
     "        sessionId text,\n",
@@ -337,13 +352,14 @@
     "\n",
     "try:\n",
     "    session.execute(query)\n",
+    "    print(\"Table created\")\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -357,22 +373,25 @@
     }
    ],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache\n",
-    "# Cassandra code below\n",
+    "# Read the csv file\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "## And INSERT the data\n",
     "        query = \"\"\"\n",
-    "            INSERT INTO music_library (sessionId, itemInSession, artist, song, length)\n",
+    "            INSERT INTO music_library \n",
+    "                (sessionId, itemInSession, artist, song, length)\n",
     "        \"\"\"\n",
     "        query = query + \"VALUES (%s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[3], line[8], line[0], line[9], line[5]))\n",
+    "        ## Assign which column element should be assigned for each\n",
+    "        ## column in the INSERT statement.\n",
+    "        ## E.g., to INSERT artist_name and user first_name,\n",
+    "        ## use `line[0], line[1]`\n",
+    "        session.execute(query, (line[3], line[8], line[0],\n",
+    "                                line[9], line[5]))\n",
     "    print('Values inserted')"
    ]
   },
@@ -385,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -404,9 +423,10 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "## Verify the data was entered into the table\n",
     "verify = \"\"\"\n",
-    "    SELECT * FROM music_library WHERE iteminsession = '338' AND sessionid = '4';\n",
+    "    SELECT * FROM music_library\n",
+    "    WHERE iteminsession = '338' AND sessionid = '4';\n",
     "\"\"\"\n",
     "\n",
     "try:\n",
@@ -425,26 +445,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "## Query 2\n",
+    "### Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_artist_library = \"DROP TABLE artist_library;\"\n",
-    "\n",
-    "try:\n",
-    "    session.execute(drop_artist_library)\n",
-    "except Exception as e:\n",
-    "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -456,8 +463,9 @@
     }
    ],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by\n",
-    "## itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "## Query 2: Give me only the following: name of artist,\n",
+    "## song (sorted by itemInSession) and user (first and last name)\n",
+    "## for userid = 10, sessionid = 182\n",
     "query = \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS artist_library (\n",
     "        userId text,\n",
@@ -467,7 +475,7 @@
     "        song text,\n",
     "        firstName text,\n",
     "        lastName text,\n",
-    "        PRIMARY KEY (userId, sessionId, itemInSession)\n",
+    "        PRIMARY KEY ((userId, sessionId), itemInSession)\n",
     "    )\n",
     "\"\"\"\n",
     "\n",
@@ -480,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -500,18 +508,20 @@
     "    for line in csvreader:\n",
     "        query = \"\"\"\n",
     "            INSERT INTO artist_library\n",
-    "                (userId, sessionId, itemInSession, artist, song, firstName, lastName)\n",
+    "                (userId, sessionId, itemInSession,\n",
+    "                 artist, song, firstName, lastName)\n",
     "        \"\"\"\n",
     "        query = query + \"VALUES (%s, %s, %s, %s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[10], line[8], line[3], line[0], line[9], line[1], line[4]))\n",
+    "        ## Assign column element\n",
+    "        session.execute(query,\n",
+    "                        (line[10], line[8], line[3], line[0],\n",
+    "                         line[9], line[1], line[4]))\n",
     "    print('Values inserted')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -550,11 +560,11 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "## Verify the data was entered into the table\n",
     "verify = \"\"\"\n",
     "    SELECT * FROM artist_library\n",
     "    WHERE userid = '10' AND sessionid = '182'\n",
-    "    ORDER BY sessionid, iteminsession;\n",
+    "    ORDER BY iteminsession;\n",
     "\"\"\"\n",
     "\n",
     "try:\n",
@@ -570,22 +580,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 130,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "drop_user_library = \"DROP TABLE user_library;\"\n",
-    "\n",
-    "try:\n",
-    "    session.execute(drop_user_library)\n",
-    "except Exception as e:\n",
-    "    print(e)"
+    "## Query 3\n",
+    "### Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -597,14 +601,15 @@
     }
    ],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "## Query 3: Give me every user name (first and last) in my music\n",
+    "## app history who listened to the song 'All Hands Against His Own'\n",
     "query = \"\"\"\n",
     "    CREATE TABLE IF NOT EXISTS user_library (\n",
+    "        song text,\n",
     "        userId text,\n",
     "        firstName text,\n",
     "        lastName text,\n",
-    "        song text,\n",
-    "        PRIMARY KEY (song, userId, firstName, lastName)\n",
+    "        PRIMARY KEY ((song), userId)\n",
     "    )\n",
     "\"\"\"\n",
     "\n",
@@ -617,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -640,22 +645,22 @@
     "                (userId, firstName, lastName, song)\n",
     "        \"\"\"\n",
     "        query = query + \"VALUES (%s, %s, %s, %s)\"\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[10], line[1], line[4], line[9]))\n",
+    "        ## Assign column elements\n",
+    "        session.execute(query,\n",
+    "                        (line[10], line[1], line[4], line[9]))\n",
     "    print('Values inserted')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Users:\n",
+      "User(s):\n",
       "\n",
       "Jacqueline Lynch\n",
       "\n",
@@ -667,7 +672,7 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "## Verify the data was entered into the table\n",
     "verify = \"\"\"\n",
     "    SELECT * FROM user_library\n",
     "    WHERE song = 'All Hands Against His Own';\n",
@@ -678,7 +683,7 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "\n",
-    "print(\"Users:\\n\")\n",
+    "print(\"User(s):\\n\")\n",
     "for row in rows:\n",
     "    print(f\"{row.firstname} {row.lastname}\\n\")"
    ]
@@ -692,23 +697,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TO-DO: Drop the table before closing out the sessions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tables dropped\n"
+      "Error from server: code=2200 [Invalid query] message=\"unconfigured table music_library\"\n"
      ]
     }
    ],
@@ -717,7 +713,8 @@
     "drop_artist_library = \"DROP TABLE artist_library;\"\n",
     "drop_user_library = \"DROP TABLE user_library;\"\n",
     "\n",
-    "drop_queries = [drop_music_library, drop_artist_library, drop_user_library]\n",
+    "drop_queries = [drop_music_library, drop_artist_library,\n",
+    "                drop_user_library]\n",
     "\n",
     "try:\n",
     "    for query in drop_queries:\n",
